--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,44 @@
-# Compiled class file
-*.class
+### Extra Files ###
+*.log*
+*.epoch
+*.lck
+.svn/
+*.fpr
+target/
+!.mvn/wrapper/maven-wrapper.jar
+node_modules/
+node/
+logs/
+.vscode
 
-# Log file
-*.log
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
 
-# BlueJ files
-*.ctxt
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+### Visual Studio Code ###
+.vscode/*
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+### ngx-rocket ###
+.env.json
+.env.ts
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+### NetBeans ###
+nbproject/private/
+dist/
+nbdist/
+.nb-gradle/
+
+### Misc ###
+npm-debug.log
+/.metadata/
+
