--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -26,15 +26,14 @@
 	</properties>
 
 	<dependencies>
-	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-web</artifactId>
-	</dependency>
-
 		<dependency>
-			<groupId>org.camunda.bpm.springboot</groupId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.bpm.extension.springboot</groupId>
 			<artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
-			<version>3.0.0</version>
+			<version>2.2.0</version>
 		</dependency>
 
 		<dependency>
@@ -42,52 +41,14 @@
 			<artifactId>camunda-commons-typed-values</artifactId>
 			<version>1.6.0</version>
 		</dependency>
-
 		<dependency>
-			<groupId>org.camunda.bpm.springboot</groupId>
-			<artifactId>camunda-bpm-spring-boot-starter-webapp-core</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.camunda.commons</groupId>
-			<artifactId>camunda-commons-root</artifactId>
-			<version>1.6.0</version>
-			<type>pom</type>
-		</dependency>
-
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.camunda.commons</groupId>
-			<artifactId>camunda-commons-utils</artifactId>
-			<version>1.6.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.camunda.commons</groupId>
-			<artifactId>camunda-commons-typed-values</artifactId>
-			<version>1.6.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.camunda.commons</groupId>
-			<artifactId>camunda-commons-bom</artifactId>
-			<version>1.6.0</version>
-			<type>pom</type>
-		</dependency>
-
-		<dependency>
-			<groupId>org.camunda.commons</groupId>
-			<artifactId>camunda-commons-logging</artifactId>
-			<version>1.6.0</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
