Remove src from main project

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,11 +1,15 @@
-camunda.bpm:
-  admin-user:
-    id: demo
-    password: demo
-    firstName: Bizu
-  filter:
-    create: All tasks
-    
+spring:
+  application:
+    name: hacktonteam1
+camunda:
+  bpm:
+    admin-user:
+      id: demo
+      password: demo
+      firstName: Bizu
+    filter:
+      create: All tasks
+
 yelp:
   endpoint: https://api.yelp.com/v3
   token: hqMsgB_xwwoYGoWa-tvJsc6SFii_U6aLaBuvIdERcwEq1U0KwXJiaSRIx8LOGgudr0-kOGU9Ct7NUpOwxOvQbSW3agr2e-qCuiSH3R9t8epEbWBPrRas2a6gHirXW3Yx
