--- a/ui/.yo-rc.json
+++ b/ui/.yo-rc.json
@@ -3,18 +3,16 @@
     "version": "5.2.0",
     "props": {
       "location": "path",
-      "appName": "name-not-found-ui",
-      "target": [
-        "web"
-      ],
+      "appName": "workflowtheysay",
+      "target": ["web"],
       "pwa": true,
       "ui": "material",
       "layout": "simple",
-      "auth": false,
+      "auth": true,
       "lazy": false,
       "angulartics": false,
       "prettier": true,
-      "projectName": "name-not-found-ui",
+      "projectName": "workflowtheysay",
       "packageManager": "npm",
       "mobile": []
     }
